<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="CommandthrowViewModel"
            type="com.pitchgauge.j9pr.pitchgauge.ThrowGaugeViewModel"/>
    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/inAngle"
            app:layout_constraintBottom_toTopOf="@+id/inEulerPitch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/command_angle"
            android:padding="8dp"
            android:textSize="30dp"
            android:text="@{CommandthrowViewModel.Angle}" />

        <TextView
            android:id="@+id/inEulerPitch"
            app:layout_constraintBottom_toTopOf="@+id/inEulerRoll"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inAngle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/euler_pitch"
            android:padding="8dp"
            android:textSize="30dp"
            android:text="@{CommandthrowViewModel.EulerPitch}" />

        <TextView
            android:id="@+id/inEulerRoll"
            app:layout_constraintBottom_toTopOf="@+id/inEulerYaw"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inEulerPitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/euler_roll"
            android:padding="8dp"
            android:textSize="30dp"
            android:text="@{CommandthrowViewModel.EulerRoll}" />

        <TextView
            android:id="@+id/inEulerYaw"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inEulerRoll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/euler_yaw"
            android:padding="8dp"
            android:textSize="30dp"
            android:text="@{CommandthrowViewModel.EulerYaw}" />

    </android.support.constraint.ConstraintLayout>
</layout>